# tiny-c

./: .gitignore  README.md
01_greeting/: .clang-format  Makefile  compile_flags.txt  greeting.c  greetings.c  meson.build  time.c
nato/: meson.build  nato.c
